--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "main": "server.js",
   "dependencies": {
     "body-parser": "~1.0.1",
+    "cors": "^2.8.5",
     "express": "~4.0.0",
     "mongoose": "~3.6.13",
     "sqlite3": "^4.1.0"
